Adding Charts to WeatherPy

--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d6060181",
+   "id": "47568b18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e45def75",
+   "id": "af7cb317",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "60bd8917",
+   "id": "6ee0e59b",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5ed01103",
+   "id": "50dbb2fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4d4e1d2c",
+   "id": "c851b0ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a16aa69f",
+   "id": "a11aad4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3d8ac2fd",
+   "id": "fe64e57c",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0f8ccc7d",
+   "id": "5abaa0d5",
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f90fb7f3",
+   "id": "396982e7",
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d1138cde",
+   "id": "4f381728",
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "734d7334",
+   "id": "f59b0ee1",
    "metadata": {},
    "outputs": [
     {
@@ -1482,14 +1482,14 @@
     "    # Create endpoint URL with each city.\n",
     "    city_url = url + \"&q=\" + cities[i].replace(\" \",\"+\")\n",
     "#     city_url = url + \"&q=\" + city.replace(\" \",\"+\")\n",
-    "    print(f\"Processing Record {record_count} of Set {set_count} | {cities[i]} | {city_url}\")\n",
+    "    print(f\"Processing Record {record_count} of Set {set_count} | {cities[i]} \")\n",
     "    record_count += 1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "bda0ff66",
+   "id": "2c90fcf2",
    "metadata": {},
    "outputs": [
     {
@@ -2271,7 +2271,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "f1b71f92",
+   "id": "b805e325",
    "metadata": {},
    "outputs": [
     {
@@ -2292,7 +2292,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "89bd2cf8",
+   "id": "d38dd9ef",
    "metadata": {},
    "outputs": [
     {
@@ -2492,7 +2492,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "447e0bf7",
+   "id": "b6eadec8",
    "metadata": {},
    "outputs": [
     {
@@ -2725,7 +2725,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "9fc11eab",
+   "id": "911d7820",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2738,7 +2738,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "cd91437b",
+   "id": "0162cf6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2753,7 +2753,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "9908380c",
+   "id": "c7d3777d",
    "metadata": {},
    "outputs": [
     {
@@ -2795,7 +2795,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "6e7068ac",
+   "id": "83c2bea0",
    "metadata": {},
    "outputs": [
     {
@@ -2832,7 +2832,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "5320a519",
+   "id": "8159cb5e",
    "metadata": {},
    "outputs": [
     {
@@ -2869,7 +2869,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "c72e38f0",
+   "id": "3825ffd4",
    "metadata": {},
    "outputs": [
     {
@@ -2906,7 +2906,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1526a6ef",
+   "id": "62940f8f",
    "metadata": {},
    "outputs": [],
    "source": []
